added modifications for CircleCi to build successfully